# CAD-Exchanger-Task

./: CMakeLists.txt  README.md  main.cpp
include/: taskSolver.h
libs/curves/: CMakeLists.txt
libs/curves/include/: circle.h  curve.h  ellipse.h  helix.h  point.h  vector.h
libs/curves/src/: circle.cpp  ellipse.cpp  helix.cpp
src/: taskSolver.cpp
